Closed Bug 161691 Opened 22 years ago Closed 22 years ago

Almost-standards mode doesn't use quirks layout in all cases

Categories

(Core :: CSS Parsing and Computation, defect, P2)

defect

Tracking

()

VERIFIED FIXED
mozilla1.2alpha

People

(Reporter: emeyer, Assigned: dbaron)

References

()

Details

(Keywords: testcase, topembed+, Whiteboard: [patch] [adt2])

Attachments

(1 file, 2 obsolete files)

The "almost standards" mode (see bug 153032) is failing in cases where table
cells have multiple <br>-separated images.  In quirks mode, the layout is the
same as NN4.x and IE/*.  In strict mode, the images spread apart, as expected. 
In almost standards mode, the images spread apart, which is not expected.  This
is demonstrated in the following three testcases (they're all linked to each other):

http://www.meyerweb.com/eric/css/tests/almost-standards.html
http://www.meyerweb.com/eric/css/tests/almost-standards-quirk.html
http://www.meyerweb.com/eric/css/tests/almost-standards-strict.html

In quirks mode, the <br> elements seem to overcome the whitespace separating the
images and thus smash the images together, which is the classic "images have to
be followed by a <br> element to close up space" behavior, circa 1996.  This
isn't carried forward to "almost standards."

The expected result, from an author's point of view, is that the layout of the
almost-standards page and the quirks page (above) would be the same.
Attached patch patch (obsolete) — Splinter Review
The quirky BR behavior that is part of the quirks mode inline box model was
still keying off the modes so that it was doing the standards mode behavior in
AlmostStandards mode.  This patch changes it so that the quirky BR behavior is
also quirky in AlmostStandards mode, which I agree is the right thing to do.
Status: NEW → ASSIGNED
Priority: -- → P2
Whiteboard: [patch]
Target Milestone: --- → mozilla1.2alpha
Attached patch patch (obsolete) — Splinter Review
slightly revised
Attachment #94468 - Attachment is obsolete: true
Attached patch patchSplinter Review
slightly revised
Attachment #94469 - Attachment is obsolete: true
Marking topembed, although with the amazingly speedy patching I almost feel like
it isn't necessary.  You rock, David!
Keywords: topembed
Comment on attachment 94470 [details] [diff] [review]
patch

sr=bzbarsky
Attachment #94470 - Flags: superreview+
Keywords: testcase
Fix checked in to trunk, 2002-08-11 11:00 PDT.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Verifying fix in 2002081208-trunk.  Great work!
Status: RESOLVED → VERIFIED
Keywords: nsbeta1
From email from Evangelist, this sounds like "a simple fix, self-contained",
that would prevent sites to be broken in the future, by not "further fragment
the DOCTYPE switching space." This has baked for 3 weeks, with no known
regressions on the trunk. Adding edt1.0.2 and Mozilla1.0.2 keywords to nominate
for 1.0 branch landing.
Whiteboard: [patch] → [patch] [adt2]
Comment on attachment 94470 [details] [diff] [review]
patch

a=rjesup@wgate.com for 1.0 branch.  You know the drill.  Check in asap if you
want to make 1.0.2
Attachment #94470 - Flags: approval+
Fix checked in to MOZILLA_1_0_BRANCH, 2002-09-11 13:14 PDT.
Jaime please + the topembed
Please verify the bug. Once verified, change the keyword fixed1.0.2 to
verified1.0.2 
susie: i could plus it, but it appears to already be checked in on the trunk and
1.0 branch. i will give it a posthumus edt1.0.2+ and topembed+ for you.

ian, as assigned QA Contact, can you pls verify this as fixed on the 1.0 branch?
Once verified, change the keyword "fixed1.0.2" to "verified1.0.2."

I don't have a branch build and do not have the time to concentrate on anything
apart from the trunk, sorry.
Thanks for the feedback Ian.

Bob/Susie: Is this something the evangelist can verify?
verified fixed on branch :
checked on -- win2000 ----- 2002-10-03-08-1.0 build
           -- linux 7.2 --- 2002-10-03-07-1.0 build

changing KW  from fixed1.0.2 to verified1.0.2
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: