Make BR-related parts of the quirky inline box model also quirky in almost-standards mode, to match the rest of the inline box model quirks.  b=161691  sr=bzbarsky  r=caillon